--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center">   <a class="btn btn-black-outline btn-black" href="page60.html" target="_blank">魔力音速<br></a>     <a class="btn btn-black-outline btn-black" href="page44.html" target="_blank">課程教學</a>  <a class="btn btn-black-outline btn-black" href="page51.html" target="_blank">服務項目</a>  <a class="btn btn-black-outline btn-black" href="products.html" target="_blank">各種好用但不是fixx品牌的商品</a> <a class="btn btn-black-outline btn-black" href="https://fixxface.com" target="_blank">相見恨晚の護膚品牌</a></div>
+                <div class="text-xs-center">   <a class="btn btn-black-outline btn-black" href="page60.html" target="_blank">魔力音速<br></a>     <a class="btn btn-black-outline btn-black" href="page44.html" target="_blank">課程教學</a>  <a class="btn btn-black-outline btn-black" href="page51.html" target="_blank">服務項目</a>  <a class="btn btn-black-outline btn-black" href="index.html" target="_blank">各種好用推薦你們<br>（尚未整理好）✋<br></a> <a class="btn btn-black-outline btn-black" href="https://fixxface.com" target="_blank">相見恨晚の護膚品牌👀</a></div>
             </div>
         </div>
     </div>
